--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "react-app-rewired": "^2.2.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "browserify-zlib": "^0.2.0"
   },
   "browser": {
     "crypto": false
