--- a/package.json
+++ b/package.json
@@ -55,8 +55,9 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.7",
     "assert": "^2.0.0",
+    "browserify-zlib": "^0.2.0",
+    "path-browserify": "^1.0.1",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
@@ -65,8 +66,8 @@
     "react-app-rewired": "^2.2.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "url": "^0.11.0",
-    "browserify-zlib": "^0.2.0"
+    "tailwindcss": "^3.2.7",
+    "url": "^0.11.0"
   },
   "browser": {
     "crypto": false
